--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     }
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+
+    "jsx": "react-jsx" // Or "react-jsxdev" for development mode
 }
+
